--- a/code/html/template/status.html
+++ b/code/html/template/status.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/pictures/sva-logo-2024nobackground.png" type="image/png">
+    <link rel="icon" href="../pictures/sva-logo-2024nobackground.png" type="image/png">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/status.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/stepper_status.css') }}" id="stepperCSS" disabled>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/servo_status.css') }}" id="servoCSS" disabled>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="headerbox">
-        <a href="/api/status"><img src="/pictures/sva-logo-2024.png" class="svalogo"></a>
+        <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
         <center>
             <a href="/api/status" class="robotname">DrinkName</a>
         </center>
@@ -63,7 +63,7 @@
 
     <div id="stepper" class="page">
         <header class="headerbox">
-            <a href="/api/status"><img src="/pictures/sva-logo-2024.png" class="svalogo"></a>
+            <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
             <center>
                 <a href="/api/status" class="robotname">Stepper Motor Status</a>
             </center>
@@ -91,7 +91,7 @@
 
     <div id="servo" class="page">
         <header class="headerbox">
-            <a href="/api/status"><img src="/pictures/sva-logo-2024.png" class="svalogo"></a>
+            <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
             <center>
                 <a href="/api/status" class="robotname">Servo Motor Status</a>
             </center>
@@ -113,7 +113,7 @@
 
     <div id="scale" class="page">
         <header class="headerbox">
-            <a href="/api/status"><img src="/pictures/sva-logo-2024.png" class="svalogo"></a>
+            <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
             <center>
                 <a href="/api/status" class="robotname">Scale Status</a>
             </center>
