--- a/code/html/template/scale_status.html
+++ b/code/html/template/scale_status.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="headerbox">
-        <a href="/api/status"><img src="/pictures/sva-logo-2024.png" class="svalogo"></a>
+        <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
         <center>
             <a href="/api/status" class="robotname">Scale Status</a>
         </center>
