--- a/code/html/template/status.html
+++ b/code/html/template/status.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../pictures/sva-logo-2024nobackground.png" type="image/png">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/status.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/stepper_status.css') }}" id="stepperCSS" disabled>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/servo_status.css') }}" id="servoCSS" disabled>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/scale_status.css') }}" id="scaleCSS" disabled>
+    <link rel="stylesheet" href="../static/css/status.css">
+    <link rel="stylesheet" href="../static/css/stepper_status.css" id="stepperCSS" disabled>
+    <link rel="stylesheet" href="../static/css/servo.css')" id="servoCSS" disabled>
+    <link rel="stylesheet" href="../static/css/scale_status.css" id="scaleCSS" disabled>
     <title>Bar Roboter</title>
 </head>
 <body>
