--- a/code/html/template/stepper_status.html
+++ b/code/html/template/stepper_status.html
@@ -3,17 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../static/pictures/sva-logo-2024nobackground.png" type="image/png">
+    <link rel="stylesheet" href="../static/css/status.css">
+    <link rel="stylesheet" href="../static/css/stepper_status.css">
+    <link rel="stylesheet" href="../static/css/servo_status.css">
+    <link rel="stylesheet" href="../static/css/scale_status.css">
     <title>Stepper Motor Status</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/stepper_status.css') }}">
-    <script src="{{ url_for('static', filename='js/stepper_status.js') }}"></script>
 </head>
 <body>
     <header class="headerbox">
-        <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
+        <a href="/api/status"><img src="../static/pictures/sva-logo-2024.png" class="svalogo"></a>
         <center>
             <a href="/api/status" class="robotname">Stepper Motor Status</a>
         </center>
     </header>
+
+    <div class="menu">
+        <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+        <nav class="menu-content" id="menuContent">
+            <ul>
+                <li><a href="/api/status" onclick="showPage('general')">General Status</a></li>
+                <li><a href="/api/stepper/status" onclick="showPage('stepper')">Stepper Motor Status</a></li>
+                <li><a href="/api/servo/status" onclick="showPage('servo')">Servo Motor Status</a></li>
+                <li><a href="/api/scale/status" onclick="showPage('scale')">Scale Status</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div id="stepper" class="page active">
         <h1>Stepper Motor Status</h1>
         <div class="status-item">
@@ -35,5 +51,7 @@
             <span id="enabledStatus">No</span>
         </div>
     </div>
+
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
