--- a/code/html/template/status.html
+++ b/code/html/template/status.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../pictures/sva-logo-2024nobackground.png" type="image/png">
+    <link rel="icon" href="../static/pictures/sva-logo-2024nobackground.png" type="image/png">
     <link rel="stylesheet" href="../static/css/status.css">
     <link rel="stylesheet" href="../static/css/stepper_status.css">
     <link rel="stylesheet" href="../static/css/servo_status.css">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="headerbox">
-        <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
+        <a href="/api/status"><img src="../static//pictures/sva-logo-2024.png" class="svalogo"></a>
         <center>
             <a href="/api/status" class="robotname">DrinkName</a>
         </center>
@@ -113,7 +113,7 @@
 
     <div id="scale" class="page">
         <header class="headerbox">
-            <a href="/api/status"><img src="../pictures/sva-logo-2024.png" class="svalogo"></a>
+            <a href="/api/status"><img src="../static/pictures/sva-logo-2024.png" class="svalogo"></a>
             <center>
                 <a href="/api/status" class="robotname">Scale Status</a>
             </center>
