--- a/code/test/bar_robot/templates/selected_cocktail.html
+++ b/code/test/bar_robot/templates/selected_cocktail.html
@@ -11,7 +11,8 @@
     </header>
     <main>
         <h2>Start Mixing</h2>
-        <form action="{{ url_for('start_mixing', cocktail=cocktail) }}" method="post">
+        <form action="{{ url_for('start_mixing') }}" method="post">
+            <input type="hidden" name="cocktail" value="{{ cocktail }}">
             <button type="submit">Start</button>
         </form>
     </main>
