--- a/code/test/bar_robot/templates/servo_status.html
+++ b/code/test/bar_robot/templates/servo_status.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <header>
+        <a href="{{ url_for('index') }}">
+            <img src="{{ url_for('static', filename='logo.png') }}" alt="Bar Robot Logo" class="logo">
+        </a>
         <h1>Servo Motor Status</h1>
     </header>
     <main>
