--- a/code/test/bar_robot/templates/scale_status.html
+++ b/code/test/bar_robot/templates/scale_status.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ cocktail }} - Bar Robot</title>
+    <title>Scale Status - Bar Robot</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
@@ -10,14 +10,11 @@
         <a href="{{ url_for('index') }}">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="Bar Robot Logo" class="logo">
         </a>
-        <h1>{{ cocktail }}</h1>
+        <h1>Scale Status</h1>
     </header>
     <main>
-        <h2>Start Mixing</h2>
-        <form action="{{ url_for('start_mixing') }}" method="post">
-            <input type="hidden" name="cocktail" value="{{ cocktail }}">
-            <button type="submit">Start</button>
-        </form>
+        <h2>Status</h2>
+        <p>Weight: {{ status.weight }}</p>
     </main>
 </body>
 </html>
