--- a/code/test/bar_robot/static/styles.css
+++ b/code/test/bar_robot/static/styles.css
@@ -10,6 +10,14 @@ header {
     color: #fff;
     padding: 1rem;
     text-align: center;
+    position: relative;
+}
+
+header .logo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    height: 50px;
 }
 
 main {
