--- a/code/test/bar_robot/templates/stepper_status.html
+++ b/code/test/bar_robot/templates/stepper_status.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href="{{ url_for('index') }}">
-            <img src="{{ url_for('static', filename='logo.png') }}" alt="Bar Robot Logo" class="logo">
+            <img src="{{ url_for('static', filename='sva-logo-2024.png') }}" alt="Bar Robot Logo" class="logo">
         </a>
         <h1>Stepper Motor Status</h1>
     </header>
