--- a/code/test/bar_robot/templates/stepper_move.html
+++ b/code/test/bar_robot/templates/stepper_move.html
@@ -45,7 +45,7 @@
             <label for="position_name">Select Position:</label>
             <select id="position_name" name="position_name" required>
                 {% for name, value in positions.items() %}
-                    {% if name not in ['finished', 'nullPos', 'maxPos'] %}
+                    {% if name not in ['finished', 'nullPos', 'maxPos', 'standartPos'] %}
                         <option value="{{ name }}">{{ name }} ({{ value }})</option>
                     {% endif %}
                 {% endfor %}
