--- a/code/test/bar_robot/templates/stepper_move.html
+++ b/code/test/bar_robot/templates/stepper_move.html
@@ -17,11 +17,11 @@
         <h2>Current Max Position: {{ max_position }}</h2>
         <form action="{{ url_for('stepper_move') }}" method="post">
             <input type="hidden" name="action" value="move_and_save">
-            <label for="steps">Steps:</label>
-            <input type="number" id="steps" name="steps" required>
-            <label for="position_name">Position Name:</label>
-            <input type="text" id="position_name" name="position_name" required>
-            <button type="submit">Move and Save Position</button>
+                <label for="steps">Steps:</label>
+                <input type="number" id="steps" name="steps" required>
+                <label for="position_name">Position Name:</label>
+                <input type="text" id="position_name" name="position_name" required>
+                <button type="submit">Move and Save Position</button>
         </form>
         <form action="{{ url_for('stepper_move') }}" method="post">
             <input type="hidden" name="action" value="move_to_standartPos">
@@ -33,7 +33,9 @@
             <label for="position_name">Select Position:</label>
             <select id="position_name" name="position_name" required>
                 {% for name, value in positions.items() %}
-                    <option value="{{ name }}">{{ name }} ({{ value }})</option>
+                    {% if name not in ['finished', 'nullPos', 'maxPos', 'standartPos'] %}
+                        <option value="{{ name }}">{{ name }} ({{ value }})</option>
+                    {% endif %}
                 {% endfor %}
             </select>
             <label for="new_value">New Value:</label>
