--- a/code/test/bar_robot/templates/servo_status.html
+++ b/code/test/bar_robot/templates/servo_status.html
@@ -24,6 +24,8 @@
             </select>
             <button type="submit">Move</button>
         </form>
+        <h2>Edit Servo Positions</h2>
+        <a href="{{ url_for('servo_move') }}"><button>Edit Positions</button></a>
     </main>
 </body>
 </html>
