--- a/code/test/bar_robot/templates/servo_status.html
+++ b/code/test/bar_robot/templates/servo_status.html
@@ -21,6 +21,7 @@
             <select id="position" name="position" required>
                 <option value="active">Active</option>
                 <option value="inactive">Inactive</option>
+                <option value="waiting">Waiting</option>
             </select>
             <button type="submit">Move</button>
         </form>
