--- a/code/test/bar_robot/templates/selected_cocktail.html
+++ b/code/test/bar_robot/templates/selected_cocktail.html
@@ -6,17 +6,25 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <header>
+    <header class="headerbox">
         <a href="{{ url_for('index') }}">
-            <img src="{{ url_for('static', filename='sva-logo-2024.png') }}" alt="Bar Robot Logo" class="logo">
+            <img src="{{ url_for('static', filename='sva-logo-2024.png') }}" class="svalogo" alt="Bar Robot Logo">
         </a>
-        <h1>{{ cocktail }}</h1>
+        <center>
+            <a href="{{ url_for('index') }}" class="robotname">Bar Robot</a>
+        </center>
     </header>
     <main>
+        <img src="{{ url_for('static', filename='{{ cocktail }}.png') }}" class="c_pic" alt="{{ cocktail }} Picture">
+        {% for ingredient in ingredients %}
+        <div style="padding-top: 15px">
+            <h1 class="zutat">{{ ingredient }}</h1>
+        </div>
+        {% endfor %}
         <h2>Start Mixing</h2>
         <form action="{{ url_for('start_mixing') }}" method="post">
             <input type="hidden" name="cocktail" value="{{ cocktail }}">
-            <button type="submit">Start</button>
+            <button type="submit" class="mixbutton">Jetzt Zubereiten!</button>
         </form>
     </main>
 </body>
