--- a/code/test/bar_robot/static/styles.css
+++ b/code/test/bar_robot/static/styles.css
@@ -141,6 +141,9 @@ button:hover {
     letter-spacing: 1px;
     text-decoration: none;
 }
+.getränketitel:hover {
+    text-decoration: none;
+}
 
 .infobutton {
     color: white;
