--- a/code/test/bar_robot/templates/index.html
+++ b/code/test/bar_robot/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{ url_for('static', filename='sva-logo-2024nobackground.png') }}" type="image/png">
-    <link rel="stylesheet" href="{{ url_for('static', filename='/static/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <title>Bar Robot</title>
     <style>
         .bottom-buttons {
@@ -20,7 +20,7 @@
 </head>
 
 <header class="headerbox">
-    <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='/static/sva-logo-2024.png') }}" class="svalogo"></a>
+    <a href="{{ url_for('index') }}"><img src="{{ url_for('static', filename='sva-logo-2024.png') }}" class="svalogo"></a>
     <center>
         <a href="{{ url_for('index') }}" class="robotname">Bar Robot</a>
     </center>
