--- a/code/test/bar_robot/static/styles.css
+++ b/code/test/bar_robot/static/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    color: white; /* Set default text color to white */
 }
 
 .headerbox {
@@ -117,9 +118,7 @@ button:hover {
 .getränke {
     margin-top: 100px;
     max-width: 200px;
-    padding-top: 100px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 100px;
     text-align: center;
     background-color: black;
     border: 3px solid #0081C6;
@@ -141,6 +140,7 @@ button:hover {
     letter-spacing: 1px;
     text-decoration: none;
 }
+
 .getränketitel:hover {
     text-decoration: none;
 }
@@ -153,7 +153,7 @@ button:hover {
     margin-top: 38px;
     text-shadow: -2px 2px 6px #0081C6;
     text-decoration: none;
-    padding: 50px, 50px;
+    padding: 50px;
     position: sticky;
     width: 50px;
     height: 50px;
@@ -176,7 +176,7 @@ button:hover {
     text-decoration: none;
     color: white;
     letter-spacing: 1px;
-    padding-left: 40%;
+    text-align: center; /* Center align text */
 }
 
 .c_pic {
