--- a/code/test/bar_robot/templates/selected_cocktail.html
+++ b/code/test/bar_robot/templates/selected_cocktail.html
@@ -14,18 +14,22 @@
             <a href="{{ url_for('index') }}" class="robotname">Bar Robot</a>
         </center>
     </header>
-    <main style="text-align: center;">
-        <a>{{ cocktail }}</a>
-        <img src="{{ url_for('static', filename= cocktail + '.png') }}" class="c_pic" alt="{{ cocktail }} Picture">
-        {% for ingredient, volume in ingredients.items() %}
+    <main style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; text-align: center;">
+        <div style="flex: 1;">
+            <a>{{ cocktail }}</a>
+            {% for ingredient, volume in ingredients.items() %}
             <div style="padding-top: 15px">
                 <h1 class="zutat">{{ ingredient }} - {{ volume }}ml</h1>
             </div>
-        {% endfor %}
-        <form action="{{ url_for('start_mixing') }}" method="post">
-            <input type="hidden" name="cocktail" value="{{ cocktail }}">
-            <button type="submit" class="mixbutton">Jetzt Zubereiten!</button>
-        </form>
+            {% endfor %}
+            <form action="{{ url_for('start_mixing') }}" method="post">
+                <input type="hidden" name="cocktail" value="{{ cocktail }}">
+                <button type="submit" class="mixbutton">Jetzt Zubereiten!</button>
+            </form>
+        </div>
+        <div style="flex: 1;">
+            <img src="{{ url_for('static', filename= cocktail + '.png') }}" class="c_pic" alt="{{ cocktail }} Picture">
+        </div>
     </main>
 </body>
 </html>
