--- a/code/test/bar_robot/static/styles.css
+++ b/code/test/bar_robot/static/styles.css
@@ -182,13 +182,11 @@ button:hover {
 }
 
 .c_pic {
-    padding-top: 50px;
-    padding-left: 50px;
     height: 300px; /* Set a fixed height */
     width: 300px;  /* Set a fixed width */
     object-fit: cover; /* Crop the image to fit the container */
-    display: inline-block;
-    position: fixed;
+    display: block;
+    margin: 0 auto; /* Center the image within its container */
 }
 
 .mixbutton {
