--- a/code/test/bar_robot/templates/selected_cocktail.html
+++ b/code/test/bar_robot/templates/selected_cocktail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ cocktail }} - Bar Robot</title>
+    <title>{{ cocktail }}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
