--- a/code/test/bar_robot/templates/status.html
+++ b/code/test/bar_robot/templates/status.html
@@ -18,6 +18,7 @@
             <li><a href="{{ url_for('stepper_status') }}">Stepper Motor Status</a></li>
             <li><a href="{{ url_for('servo_status') }}">Servo Motor Status</a></li>
             <li><a href="{{ url_for('scale_status') }}">Scale Status</a></li>
+            <li><a href="{{ url_for('pump_move') }}">Pump Move</a></li>
         </ul>
     </main>
 </body>
